fixing broken css

--- a/src/registrar/assets/src/sass/_theme/_tables.scss
+++ b/src/registrar/assets/src/sass/_theme/_tables.scss
@@ -55,42 +55,45 @@ th {
     word-break: break-word;
   }
 
-  margin-top: units(1);
+  /* 
+  Commenting out this line (and the closing curly brace) is a quick 
+  fix to correct styling on members table for the gray lines above 
+  and below "Expand" in the mobile view. Other CSS may overwrite 
+  this styling. To be evaluated at a later time (this is low priority).
+  */
+  // @include at-media(mobile-lg) {
 
-  tr {
-    border: none;
-  }
+    margin-top: units(1);
 
-  tr:not(.hide-td-borders):not(:last-child) td,
-  tr:not(.hide-td-borders):not(:last-child) th {
-    border-bottom: 1px solid color('base-lighter');
-  }
-
-  thead th,
-  thead th[aria-sort] {
-    color: color('primary-darker');
-    border-bottom: 2px solid color('base-light');
-  }
-
-  tbody tr:last-of-type {
-    td, th {
-      border-bottom: 0;
+    tr {
+      border: none;
     }
-  }
 
-  td, th {
-    padding: units(2) units(4) units(2) 0;
-  }
+    thead th,
+    thead th[aria-sort] {
+      color: color('primary-darker');
+      border-bottom: 2px solid color('base-light');
+    }
 
-  // Hack fix to the overly specific selector above that broke utility class usefulness
-  .padding-right-105 {
-    padding-right: .75rem;
-  }
+    tbody tr:last-of-type {
+      td, th {
+        border-bottom: 0;
+      }
+    }
 
-  thead tr:first-child th:first-child {
-    border-top: none;
-  }
-}
+    td, th {
+      padding: units(2) units(4) units(2) 0;
+    }
+
+    // Hack fix to the overly specific selector above that broke utility class usefulness
+    .padding-right-105 {
+      padding-right: .75rem;
+    }
+
+    thead tr:first-child th:first-child {
+      border-top: none;
+    }
+  // }
 
   // Sortable headers
   th[data-sortable][aria-sort=ascending],
